--- a/etc/restfulapi.toml
+++ b/etc/restfulapi.toml
@@ -3,6 +3,8 @@ name = "demo"
 host = "0.0.0.0"
 port = "8050"
 key  = "this is your app key"
+grpc_host = "127.0.0.1"
+grpc_port = "18050"
 
 [mysql]
 host = "192.168.21.190"
